--- a/Front-End JavaScript Frameworks: AngularJS/Homework 1/app/dishdetail.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Homework 1/app/dishdetail.html
@@ -39,7 +39,10 @@
                 </div>    
             </div>
             <div class="col-xs-9 col-xs-offset-1">
-                <blockquote ng-repeat="comment in dishDC.dish.comments |  orderBy:dishDC.comments">
+                <h4 style="display:inline-block; margin: 20px;">Customer Comments</h4>
+                <label for="sort">Sort by:</label>
+                <input id="sort" ng-model="dishDC.filtComments" type="text">
+                <blockquote ng-repeat="comment in dishDC.dish.comments |  orderBy:dishDC.filtComments">
                     <p>{{comment.rating}} Stars</p>
                     <p>{{comment.comment}}</p>
                     <footer>{{comment.author}}, {{comment.date | date:"MMM.dd.yyyy"}}</footer>
@@ -93,7 +96,8 @@
                                
                            ]
                     };
-            this.dish = dish;  
+            this.dish = dish;
+            this.filtComments = "";
         });
     </script>
 </body>
