--- a/Front-End JavaScript Frameworks: AngularJS/Homework 2/app/dishdetail.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Homework 2/app/dishdetail.html
@@ -57,35 +57,35 @@
                 </ul>
                 <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
 					<div class="form-group">
-                        <label for="firstname" class="col-sm-2 control-label">Your Name</label> 
+                        <label for="author" class="col-sm-2 control-label">Your Name</label> 
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter Your Name">
+                            <input type="text" class="form-control" id="author" name="author" ng-model="comment.author" placeholder="Enter Your Name" required>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Number of Stars</label>
                         <div class="col-sm-10">
                             <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1
+                                <input type="radio" name="rating" id="inlineRadio1" value="1" ng-model="review.rating"> 1
                             </label>
                             <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2
+                                <input type="radio" name="rating" id="inlineRadio2" value="2" ng-model="review.rating"> 2
                             </label>
                             <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3
+                                <input type="radio" name="rating" id="inlineRadio3" value="3" ng-model="review.rating"> 3
                             </label>
                             <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 4
+                                <input type="radio" name="rating" id="inlineRadio3" value="4" ng-model="review.rating"> 4
                             </label> 
                             <label class="radio-inline">
-                                <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 5
+                                <input type="radio" name="rating" id="inlineRadio3" value="5" ng-model="review.rating" checked> 5
                             </label>     
                         </div> 
                     </div>
                     <div class="form-group">
                         <label for="feedback" class="col-sm-2 control-label">Your Comments</label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
+                            <textarea class="form-control" id="feedback" name="feedback" ng-model="review.comment" rows="12"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
