--- a/Front-End JavaScript Frameworks: AngularJS/Homework 2/app/dishdetail.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Homework 2/app/dishdetail.html
@@ -56,10 +56,11 @@
 						information and is not pristine</p>
                 </ul>
                 <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
-					<div class="form-group">
+					<div class="form-group" ng-class="{ 'has-error' : commentForm.author.$error.required && !commentForm.author.$pristine }">
                         <label for="author" class="col-sm-2 control-label">Your Name</label> 
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="author" name="author" ng-model="comment.author" placeholder="Enter Your Name" required>
+                            <span ng-show="commentForm.author.$error.required && !commentForm.author.$pristine" class="help-block">Your name is required.</span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -82,18 +83,18 @@
                             </label>     
                         </div> 
                     </div>
-                    <div class="form-group">
-                        <label for="feedback" class="col-sm-2 control-label">Your Comments</label>
+                    <div class="form-group" ng-class="{ 'has-error' : commentForm.comment.$error.required && !commentForm.comment.$pristine }">
+                        <label for="comment" class="col-sm-2 control-label">Your Comments</label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" id="feedback" name="feedback" ng-model="review.comment" rows="12"></textarea>
+                            <textarea class="form-control" id="comment" name="comment" ng-model="review.comment" rows="12" required></textarea>
+                            <span ng-show="commentForm.comment.$error.required && !commentForm.comment.$pristine" class="help-block">Your comment is required.</span>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary">Submit Comment</button>
+                            <button type="submit" class="btn btn-primary" ng-disabled="commentForm.$invalid">Submit Comment</button>
                         </div>
                     </div>
-					<p>Task 2: You need to validate that the user name and comments are entered</p>
                 </form>
             </div>
         </div><!----- End .row.row-content ------>
