--- a/Front-End JavaScript Frameworks: AngularJS/Homework 2/app/dishdetail.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Homework 2/app/dishdetail.html
@@ -43,23 +43,20 @@
                 <h4 style="display:inline-block; margin: 20px;">Customer Comments</h4>
                 <label for="sort">Sort by:</label>
                 <input id="sort" ng-model="filtComments" type="text">
-                <blockquote ng-repeat="comment in dish.comments |  orderBy:filtComments">
-                    <p>{{comment.rating}} Stars</p>
-                    <p>{{comment.comment}}</p>
-                    <footer>{{comment.author}}, {{comment.date | date:"MMM.dd.yyyy"}}</footer>
-                </blockquote>
             </div>
             <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
                 <ul class="list-unstyled">
-				    <p>Task 3: Here you include the code to show the live preview of the comment</p>
-				    <p>The comment should be shown only when the form contains valid
-						information and is not pristine</p>
+				    <blockquote ng-repeat="comment in dish.comments |  orderBy:filtComments">
+                        <p>{{comment.rating}} Stars</p>
+                        <p>{{comment.comment}}</p>
+                    <footer>{{comment.author}}, {{comment.date | date:"MMM.dd.yyyy"}}</footer>
+                </blockquote>
                 </ul>
                 <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
 					<div class="form-group" ng-class="{ 'has-error' : commentForm.author.$error.required && !commentForm.author.$pristine }">
                         <label for="author" class="col-sm-2 control-label">Your Name</label> 
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="author" name="author" ng-model="comment.author" placeholder="Enter Your Name" required>
+                            <input type="text" class="form-control" id="author" name="author" ng-model="review.author" placeholder="Enter Your Name" required>
                             <span ng-show="commentForm.author.$error.required && !commentForm.author.$pristine" class="help-block">Your name is required.</span>
                         </div>
                     </div>
