--- a/Front-End JavaScript Frameworks: AngularJS/Homework 2/app/dishdetail.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Homework 2/app/dishdetail.html
@@ -43,15 +43,19 @@
                 <h4 style="display:inline-block; margin: 20px;">Customer Comments</h4>
                 <label for="sort">Sort by:</label>
                 <input id="sort" ng-model="filtComments" type="text">
-            </div>
-            <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
-                <ul class="list-unstyled">
-				    <blockquote ng-repeat="comment in dish.comments |  orderBy:filtComments">
-                        <p>{{comment.rating}} Stars</p>
-                        <p>{{comment.comment}}</p>
+                <blockquote ng-repeat="comment in dish.comments |  orderBy:filtComments">
+                    <p>{{comment.rating}} Stars</p>
+                    <p>{{comment.comment}}</p>
                     <footer>{{comment.author}}, {{comment.date | date:"MMM.dd.yyyy"}}</footer>
                 </blockquote>
-                </ul>
+            </div>
+            <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
+				<blockquote  ng-show="!commentForm.$pristine && !commentForm.$invalid">
+                    <p>{{review.rating}} Stars</p>
+                    <p>{{review.comment}}</p>
+                    <footer>{{review.author}}, {{review.date | date:"MMM.dd.yyyy"}}</footer>
+                </blockquote>
+               
                 <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
 					<div class="form-group" ng-class="{ 'has-error' : commentForm.author.$error.required && !commentForm.author.$pristine }">
                         <label for="author" class="col-sm-2 control-label">Your Name</label> 
