--- a/Front-End JavaScript Frameworks: AngularJS/Homework 2/app/dishdetail.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Homework 2/app/dishdetail.html
@@ -50,12 +50,15 @@
                 </blockquote>
             </div>
             <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
-				<blockquote  ng-show="!commentForm.$pristine && !commentForm.$invalid">
-                    <p>{{review.rating}} Stars</p>
-                    <p>{{review.comment}}</p>
-                    <footer>{{review.author}}, {{review.date | date:"MMM.dd.yyyy"}}</footer>
-                </blockquote>
-               
+                <ul class="list-unstyled">
+                    <li ng-show="!commentForm.$pristine && commentForm.$valid">
+                        <blockquote>
+                            <p>{{review.rating}} Stars</p>
+                            <p>{{review.comment}}</p>
+                            <footer>{{review.author}}, {{review.date | date:"MMM.dd.yyyy"}}</footer>
+                        </blockquote>
+                    </li>    
+                </ul>
                 <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
 					<div class="form-group" ng-class="{ 'has-error' : commentForm.author.$error.required && !commentForm.author.$pristine }">
                         <label for="author" class="col-sm-2 control-label">Your Name</label> 
